--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/takashiki/cos-webpack#readme",
   "dependencies": {
-    "cos-nodejs-sdk-v5": "^2.2.4",
+    "cos-nodejs-sdk-v5": "2.3.5",
     "lodash.isregexp": "^4.0.1",
     "ora": "^1.3.0"
   }
